--- a/Chat/Client/form.ui
+++ b/Chat/Client/form.ui
@@ -41,9 +41,9 @@
        <widget class="QLineEdit" name="port"/>
       </item>
       <item>
-       <widget class="QPushButton" name="btn_open">
+       <widget class="QPushButton" name="btn_conn">
         <property name="text">
-         <string>서버 열기</string>
+         <string>서버 접속</string>
         </property>
        </widget>
       </item>
@@ -51,19 +51,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="2,1">
-     <item>
-      <widget class="QGroupBox" name="groupBox_2">
-       <property name="title">
-        <string>접속자 정보</string>
-       </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <item>
-         <widget class="QTableWidget" name="tw"/>
-        </item>
-       </layout>
-      </widget>
-     </item>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QGroupBox" name="groupBox_3">
        <property name="title">
