--- a/Chat/Client/form.ui
+++ b/Chat/Client/form.ui
@@ -59,6 +59,20 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>닉네임</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="nick"/>
+          </item>
+         </layout>
+        </item>
+        <item>
          <widget class="QListWidget" name="lw"/>
         </item>
         <item>
