--- a/Chat/Client/form.ui
+++ b/Chat/Client/form.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>310</width>
+    <width>300</width>
     <height>400</height>
    </rect>
   </property>
@@ -19,11 +19,11 @@
      <property name="title">
       <string>서버 설정</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,4,1,3,2">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,2,0,1,1">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Server IP</string>
+         <string>IP</string>
         </property>
        </widget>
       </item>
@@ -33,7 +33,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Server Port</string>
+         <string>Port</string>
         </property>
        </widget>
       </item>
