--- a/Chat/Server/form.ui
+++ b/Chat/Server/form.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
+    <width>500</width>
     <height>300</height>
    </rect>
   </property>
@@ -19,11 +19,11 @@
      <property name="title">
       <string>서버 설정</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,4,1,3,2">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,3,0,2,1">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Server IP</string>
+         <string>IP</string>
         </property>
        </widget>
       </item>
@@ -33,7 +33,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Server Port</string>
+         <string>Port</string>
         </property>
        </widget>
       </item>
@@ -51,7 +51,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="2,1">
+    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="3,2">
      <item>
       <widget class="QGroupBox" name="groupBox_2">
        <property name="title">
@@ -96,6 +96,13 @@
            <widget class="QPushButton" name="btn_del">
             <property name="text">
              <string>지우기</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_delall">
+            <property name="text">
+             <string>모두 지우기</string>
             </property>
            </widget>
           </item>
